# GridMind

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Dockerfile.dashboard  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: grid_locations.yaml
data/quality/: data_quality_report_20260713T151600573548Z.json
data/quarantine/: missing_demand_20260713T134732453694Z.parquet  missing_demand_20260713T151600493022Z.parquet  missing_demand_20260713T154838741452Z.parquet
docs/: ARCHITECTURE.md  DATA_CARD.md  DEMO.md  MODEL_CARD.md  SECURITY.md
docs/images/: README.md
mlruns_backup_20260713_221018/414089671536392554/: meta.yaml
mlruns_backup_20260713_221018/414089671536392554/1c4feeb7b9dc4c9c9a7fcbfaaff5153d/: meta.yaml
mlruns_backup_20260713_221018/414089671536392554/1c4feeb7b9dc4c9c9a7fcbfaaff5153d/metrics/: bias  mae  mase  rmse  wape
mlruns_backup_20260713_221018/414089671536392554/28c6ad58d143412fb3419ecb0ed434e5/: meta.yaml
mlruns_backup_20260713_221018/414089671536392554/28c6ad58d143412fb3419ecb0ed434e5/metrics/: bias  mae  mase  rmse  wape
mlruns_backup_20260713_221018/414089671536392554/28c6ad58d143412fb3419ecb0ed434e5/tags/: mlflow.runName  mlflow.source.name
mlruns_backup_20260713_221018/414089671536392554/29fd5148c3594358a71e72b505fc497b/: meta.yaml
mlruns_backup_20260713_221018/414089671536392554/43b1cf58a9d04401a5dfa4900c809bc9/: meta.yaml
mlruns_backup_20260713_221018/414089671536392554/64a0d79377de456096605d0f67ebac7e/: meta.yaml
mlruns_backup_20260713_221018/414089671536392554/91d9b81ce60b4619a06ed41a6170f85d/: meta.yaml
mlruns_backup_20260713_221018/414089671536392554/a1cfc593fb8e41fcadf7ad4d1a717304/: meta.yaml
mlruns_backup_20260713_221018/414089671536392554/b9052e6fa7414eda99e5d4b4346d18a3/: meta.yaml
scripts/: check_tracked_secrets.py
src/gridmind/: __init__.py  cli.py  config.py  continuity.py  exceptions.py  logging_config.py  mlflow_config.py  time_utils.py
src/gridmind/alerts/: __init__.py  contracts.py  lifecycle.py  storage.py
src/gridmind/anomalies/: __init__.py  contracts.py  ensemble.py  evaluation.py  multivariate.py  residuals.py  rules.py  severity.py  storage.py
src/gridmind/api/: __init__.py  app.py  dependencies.py  entrypoint.py  errors.py  middleware.py  schemas.py  security.py
src/gridmind/api/routers/: __init__.py  alerts.py  anomalies.py  dispatch.py  (+3 more)
src/gridmind/dashboard/: __init__.py  api_client.py  app.py  charts.py  components.py  entrypoint.py  formatting.py  state.py  styles.py  view_data.py
src/gridmind/data/: __init__.py  duckdb_connection.py  eia_client.py  processing.py  schemas.py  storage.py  target_storage.py
src/gridmind/explainability/: __init__.py  shap_analysis.py
src/gridmind/features/: __init__.py  builder.py  calendar.py  contracts.py  demand.py  renewable.py  weather.py
src/gridmind/forecasting/: __init__.py  baselines.py  metrics.py  validation.py
src/gridmind/models/: __init__.py  _shared.py  catboost_model.py  factories.py  lightgbm_model.py  promotion.py  protocols.py  serialization.py  target_factory.py
src/gridmind/observability/: __init__.py  logging.py  metrics.py
src/gridmind/optimization/: __init__.py  baselines.py  battery.py  constraints.py  contracts.py  evaluation.py  objectives.py  simulation.py  solver.py  storage.py
src/gridmind/pipelines/: __init__.py  backtest_anomalies.py  backtest_dispatch.py  baseline.py  detect_anomalies.py  explain.py  ingest.py  manage_alerts.py  optimize_dispatch.py  predict.py  predict_target.py  renewable_ingest.py  train.py  train_target.py  weather_ingest.py
src/gridmind/renewables/: __init__.py  processing.py  schemas.py  storage.py  targets.py
src/gridmind/services/: __init__.py  alert_service.py  anomaly_service.py  common.py  dispatch_service.py  forecast_service.py  health_service.py  model_service.py
src/gridmind/training/: __init__.py  datasets.py  evaluator.py  leaderboard.py  multi_target.py  trainer.py  tuning.py
src/gridmind/weather/: __init__.py  client.py  locations.py  processing.py  schemas.py  storage.py
tests/: conftest.py  test_anomaly_alerts.py  test_anomaly_evaluation.py  test_anomaly_models.py  test_anomaly_pipelines.py  test_anomaly_rules.py  test_application_layer.py  test_baselines.py  test_battery_cli.py  test_battery_optimization.py  test_battery_physics.py  test_battery_simulation.py  test_cli.py  test_config.py  test_coverage_config.py  test_dashboard.py  test_eia_client.py  test_features.py  test_gap_awareness.py  test_ingestion_policy.py  test_logging_security.py  test_metrics.py  test_milestone3_models.py  test_milestone3_pipelines.py  test_ml_evaluator.py  test_ml_models.py  test_mlflow_config.py  test_pipeline.py  test_prediction_pipeline.py  test_processing.py  test_promotion.py  test_reconciliation.py  test_renewables.py  test_schemas.py  test_shap_analysis.py  test_storage.py  test_time_utils.py  test_timezone_prediction.py  test_training_pipeline.py  test_tuning.py  (+2 more)
tests/fixtures/: eia_region_response.json
(+118 files in other folders)
