[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "gridmind"
version = "0.3.0"
description = "Validated weather-aware demand, renewable-generation, and net-load forecasting"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "GridMind contributors" }]
dependencies = [
  "catboost>=1.2,<2",
  "duckdb>=1.1,<2",
  "httpx>=0.27,<1",
  "joblib>=1.4,<2",
  "lightgbm>=4.5,<5",
  "matplotlib>=3.8,<4",
  "mlflow>=2.17,<4",
  "mlforecast>=0.13,<1",
  "numpy>=1.26,<2",
  "optuna>=4,<5",
  "pandas>=2.2,<3",
  "pandera[pandas]>=0.20,<1",
  "pyarrow>=14,<21",
  "pydantic-settings>=2.5,<3",
  "pyyaml>=6,<7",
  "scikit-learn>=1.5,<2",
  "shap>=0.46,<1",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pandas-stubs>=2.2",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
  "types-python-dateutil>=2.9",
]

[project.scripts]
gridmind = "gridmind.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gridmind"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["gridmind"]
mypy_path = "src"
plugins = ["pydantic.mypy"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
  "catboost.*",
  "duckdb.*",
  "joblib.*",
  "lightgbm.*",
  "mlflow.*",
  "mlforecast.*",
  "optuna.*",
  "pandera.*",
  "pyarrow.*",
  "sklearn.*",
  "yaml.*",
  "shap.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]

[tool.coverage.run]
source = ["gridmind"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "if __name__ == .__main__.:"]
