[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "gridmind"
version = "0.6.0"
description = "Validated grid forecasting, anomaly detection, and battery-dispatch decision support"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "GridMind contributors" }]
dependencies = [
  "duckdb>=1.1,<2",
  "httpx>=0.27,<1",
  "numpy>=1.26,<2",
  "pandas>=2.2,<3",
  "pandera[pandas]>=0.20,<1",
  "pyarrow>=14,<21",
  "pydantic-settings>=2.5,<3",
  "pyyaml>=6,<7",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
forecasting = [
  "catboost>=1.2,<2",
  "joblib>=1.4,<2",
  "lightgbm>=4.5,<5",
  "matplotlib>=3.8,<4",
  "mlflow>=2.17,<4",
  "mlforecast>=0.13,<1",
  "optuna>=4,<5",
  "scikit-learn>=1.5,<2",
  "scipy>=1.11,<2",
  "shap>=0.46,<1",
]
optimization = ["scipy>=1.11,<2"]
api = [
  "fastapi>=0.115,<1",
  "mlflow>=2.17,<4",
  "prometheus-client>=0.20,<1",
  "uvicorn[standard]>=0.30,<1",
]
dashboard = ["plotly>=5.22,<7", "streamlit>=1.32,<2"]
full = [
  "catboost>=1.2,<2",
  "fastapi>=0.115,<1",
  "joblib>=1.4,<2",
  "lightgbm>=4.5,<5",
  "matplotlib>=3.8,<4",
  "mlflow>=2.17,<4",
  "mlforecast>=0.13,<1",
  "optuna>=4,<5",
  "plotly>=5.22,<7",
  "prometheus-client>=0.20,<1",
  "scikit-learn>=1.5,<2",
  "scipy>=1.11,<2",
  "shap>=0.46,<1",
  "streamlit>=1.32,<2",
  "uvicorn[standard]>=0.30,<1",
]
dev = [
  "catboost>=1.2,<2",
  "fastapi>=0.115,<1",
  "joblib>=1.4,<2",
  "lightgbm>=4.5,<5",
  "matplotlib>=3.8,<4",
  "mlflow>=2.17,<4",
  "mlforecast>=0.13,<1",
  "mypy>=1.11,<2",
  "optuna>=4,<5",
  "pandas-stubs>=2.2",
  "plotly>=5.22,<7",
  "prometheus-client>=0.20,<1",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
  "scikit-learn>=1.5,<2",
  "scipy>=1.11,<2",
  "shap>=0.46,<1",
  "streamlit>=1.32,<2",
  "types-python-dateutil>=2.9",
  "uvicorn[standard]>=0.30,<1",
]

[project.scripts]
gridmind = "gridmind.cli:app"
gridmind-api = "gridmind.api.entrypoint:main"
gridmind-dashboard = "gridmind.dashboard.entrypoint:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gridmind"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["gridmind"]
mypy_path = "src"
plugins = ["pydantic.mypy"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
  "catboost.*",
  "duckdb.*",
  "joblib.*",
  "lightgbm.*",
  "mlflow.*",
  "mlforecast.*",
  "optuna.*",
  "pandera.*",
  "pyarrow.*",
  "plotly.*",
  "sklearn.*",
  "yaml.*",
  "shap.*",
  "scipy.*",
  "streamlit.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]

[tool.coverage.run]
source = ["gridmind"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "if __name__ == .__main__.:"]
